# powerplant-coding-challenge

./: .gitignore  Dockerfile  README.md  pyproject.toml
alejandro_mata_solution/: README.md  dockerfile  payload_with_excess.json
alejandro_mata_solution/app/: app.py
app/: pyproject.toml
app/app/: logging_config.py  main.py
app/app/controller/: main_controller.py
app/app/controller/dto/productionplan/request/: fuels_dto.py  payload_dto.py  power_plant_dto.py
app/app/controller/dto/productionplan/response/: plant_power_dto.py
app/app/controller/mapper/: fuels_mapper.py  plant_power_mapper.py  power_plant_mapper.py
app/app/entities/: abstract_power_plant.py  fuels.py  gas_fired.py  power_plant.py  turbo_jet.py  wind_turbine.py
app/app/exception/: invalid_power_plant_type_exception.py  power_plant_challenge_exception.py
app/app/use_case/: production_plan.py
app/app/utils/: constants.py  utils.py
