[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Gems energy management system"
authors = ["Antonio de Antonio <antonio.deantonio@tmceurope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
